--- a/demo/composer.json
+++ b/demo/composer.json
@@ -14,7 +14,7 @@
         "laravel/framework": "5.7.*",
         "laravel/passport": "^7.1",
         "laravel/tinker": "^1.0",
-        "yajra/laravel-datatables-oracle": "^8.13"
+        "yajra/laravel-datatables-oracle": "~6.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
